--- a/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/index.html
+++ b/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/index.html
@@ -1,37 +1,58 @@
 <!doctype html>
-<html>
-<head>
+<html><head>
 <meta charset="utf-8">
-<title>Documento sin título</title>
-<link rel="stylesheet" href="estilos/estilosBikers.css" type="text/css"/>
-<meta name="viewport" content="initial-scale=1, width=device-width">
-</head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bike Shop</title>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" type="text/css" href="estilos/estilosBikers.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Prompt&family=Questrial&&display=swap&family=Maitree:wght@600&display=swap">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
+</head>
 <body>
 <header>
-<div id="logo"><img src="../../../logo.PNG" width="153" height="126" alt=""/></div>
+<div id="cabecera">
+<!--acá va la cabecera-->
+</div>
+<div class="row" id="row_exp" >
+<!--/*acá va la barra de naveg*/-->	
+</div>
 </header>
 <main>
-<nav>
-<ul>
-<li>BICICLETAS</li>	
-<li>REPUESTOS</li>
-<li>ACCESORIOS</li>
-<li>CONTACTO</li>
-<li>NOVEDADES</li>
-	
-</ul>
-	
-</nav>
-<div class="fotos" id="div1"><img src="imagenes/Raleigh-Urban.jpg" class="bicis" alt=""/></div>
-	
-<div class="fotos"></div>
+<div id="div-main">
+<div class="cajas" id="caja1">
+<div id="div1"><h3>LOREM IPSUM</h3>
+ <img src="imagenes/2b5d7b0a609a6c7e36ad97325fd84272.jpg" id="bici-vintage" alt=""/>
+ <p>Lorem ipsum dolor sonsectetur adipisicing elit. Maxime modi aliquid sunt, reprehenderit nobis itaque consequuntur tempore non perferendis, quis, ab expedita earum laborum, laudantium aperiam accusamus a iste laboriosam?</p>
+</div>
+<hr/>
+ <div id="div2"><h3>LOREM IPSUM</h3>
+ <img src="imagenes/gt-ch.jpg" id="" alt=""/>
+ <p>Lorem ipsum dolor sit ad sunt, reprehenderit nobis itaque consequuntur tempore non perferendis, quis, ab expedita earum laborum, laudantium aperiam accusamus a iste laboriosam?</p>
+  </div></div>
 
-<div class="fotos"></div>	
-<div class="fotos"></div>	
-
+ <div class="cajas" id="caja2">
+ <img src="imagenes/cascos.jpg" id="cascos" alt=""/><div><h2 >Accesorios</h2><br>
+ <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae optio, assumenda fugit nostrum asperiores, vel aut, repellendus dolore vero quibusdam tempore sapiente. Debitis distinctio sint odit totam iusto sapiente ut.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus omnis veniam, explicabo molestias! Explicabo recusandae ut iure, molestias debitis. Adipisci ipsam nostrum doloribus at quaerat aut libero temporibus rem asperiores.</p>
+  </div></div></div>
+<div class="cajas " id="caja3" ><h1>Repuestos</h1>
+  
+ <img src="imagenes/pinion.JPG"  alt="">Lorem ipsumorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae optio, assumenda fugit nostrum asperiores, vel aut, repellendus dolore vero quibusdam tempore sapiente. Debitis distinctio sint odit totam iusto sapiente ut.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus omnis veniam, explicabo molestias! Explicabo recusandae ut iure, molestias debitis. Adipisci ipsam nostrum doloribus at quaerat aut libero temporibus rem asperiores. dolor sit amet, consectetur adipisicing elit. Commodi distinctio neque similique, officia facilis molestiae. Ipsam possimus laboriosam neque doloremque incidunt labore illum debitis molestiae, deserunt. Ipsam voluptate molestias voluptates.
+</div>
+<div class="cajas" id="caja4"><h2>Eventos 2022</h2>
+ <img src="imagenes/55.jpg"  alt=""/>
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae optio, assumenda fugit nostrum asperiores, vel aut, repellendus dolore vero quibusdam tempore sapiente. Debitis distinctio sint odit totam iusto sapiente ut.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus omnis veniam, explicabo molestias! Explicabo recusandae ut iure, molestias debitis. Adipisci ipsam nostrum doloribus at quaerat aut libero temporibus rem asperiores.</p>
+ </div></div>
 </main>
-<footer>
-</footer>
-</body>
-</html>
+
+<footer id="footer">
+	
+<script src="estilos/elementos.js"></script>
+	</footer>
+	</body>
+	</html>
