--- a/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/contacto.html
+++ b/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/contacto.html
@@ -6,31 +6,32 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bike Shop</title>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" type="text/css" href="estilos/estilosBikers.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Prompt&family=Questrial&display=swap">
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Prompt&family=Questrial&&display=swap&family=Maitree:wght@600&display=swap">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<style>
-
-
-</style>
 
 </head>
 <body>
 <header>
 <div id="cabecera">
-
+<!--acá va la cabecera-->
+</div>
 <div class="row" id="row_exp" >
-	</div></div>
+<!--/*acá va la barra de naveg*/-->	
+</div>
 </header>
-<div class="row">
-<div class col-md-3 col-xs-12></div>
-<div class col-md-3 col-xs-12></div>
-<div class col-md-3 col-xs-12></div>
+<main>
+<div class="row" id="fila-contacto">
+
 <div id="datos-contacto">
 <h3>Contacto:</h3>
+
 <ul class="lista-contacto">
 	<li><i class="fa fa-envelope" > bikeshop@gmail.com</i></li>
 	<li><i class="fa fa-map-marker"> Av Cordoba 3333 - CABA - Argentina</i></li>
@@ -38,8 +39,12 @@
 	<li><i class="fa fa-clock-o"> Horario: L/V 9 a 20 hs</i></li>
 	</ul>
 	</div>
-	<div class col-md-3 col-xs-12></div>
+	<div id="mapa"><iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.257904924616!2d-58.415833185010946!3d-34.59763936468299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca88918856dd%3A0xe6421602bab54de3!2sAv.%20C%C3%B3rdoba%203333%2C%20C1187AAH%20CABA!5e0!3m2!1ses-419!2sar!4v1666374902584!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 	</div>
+</main>
+
+<footer id="footer">
 <script src="estilos/elementos.js"></script>
+</footer>
 </body>
 </html>
