--- a/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/index.html
+++ b/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/index.html
@@ -27,7 +27,7 @@
 <div id="div-main">
 <div class="cajas" id="caja1">
 <div id="div1"><h3>LOREM IPSUM</h3>
- <img src="imagenes/2b5d7b0a609a6c7e36ad97325fd84272.jpg" id="bici-vintage" alt=""/>
+ <img src="imagenes/2b5d7b0a609a6c7e36ad97325fd84272.jpg" id="bici-vintage" alt=""/>width:95%;
  <p>Lorem ipsum dolor sonsectetur adipisicing elit. Maxime modi aliquid sunt, reprehenderit nobis itaque consequuntur tempore non perferendis, quis, ab expedita earum laborum, laudantium aperiam accusamus a iste laboriosam?</p>
 </div>
 <hr/>
