--- a/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/bicicletas-MTB.html
+++ b/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/bicicletas-MTB.html
@@ -12,23 +12,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Prompt&family=Questrial&&display=swap&family=Maitree:wght@600&display=swap">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-	.contenedor-bicis{
-display:grid;
+<link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-margin:  5% 50px;
-grid-template-columns: 30% 30% 30%;
-grid-template-rows:300px;
-gap: 10px;
-	}
-	.contenedor-bicis img{
-border: 1px solid green;
-
-
-		
-	}	
-	
-</style>
 </head>
 <body>
 <header>
@@ -41,21 +26,66 @@ border: 1px solid green;
 </header>
 
 <main>
-<div class="contenedor-bicis"	>
- <div id="box1"><img src="imagenes/Raleigh-Venture-verde.jpg" width="353" height="247" alt=""/></div>
-<div class="box2"><img src="imagenes/FireBird.jpg" width="353" height="247" alt=""/></div>	
- <div id="box3"><img src="imagenes/Raleigh-Venture-verde.jpg" width="353" height="247" alt=""/></div>
-<div class="box4"><img src="imagenes/FireBird.jpg" width="353" height="247" alt=""/></div>	
 
-	</div>
-	</main>
+<div class="contenedor-bicis" 	>
+	<h1 class="animate__animated animate__zoomInUp" id="animacion">NUEVA LINEA 2022</h1>
 
-		
+
+<table class="cartas" >
+	<tr>
+	<td><div class="tarjeta">
+		<div class="album">
+		<img src="imagenes/FireBird-OT.jpg" alt="" style="width=100%">
+		<div class="contenido">
+		<p class="letra">Firebirb 29er On Trail</p>
+		</div></div></div>
+		</td>	   
+	 <td><div class="tarjeta">
+		<div class="album">
+		<img src="imagenes/FireBird-AC.jpg" alt="" style="width=100%">
+		<div class="contenido">
+		<p class="letra">Firebirb 29er On Trail</p>
+		</div></div></div>
+		</td>	   
+	<td><div class="tarjeta">
+		<div class="album">
+		<img src="imagenes/FireBird-AM.jpg" alt="">
+		<div class="contenido">
+		<p class="letra">Firebirb 29er On Trail</p>
+		</div></div></div>
+		</td>	   
+	   </tr>
+	<tr>
+	<td><div class="tarjeta">
+		<div class="album">
+		<img src="imagenes/FireBird-azul.jpg" alt="" >
+		<div class="contenido">
+		<p class="letra">Firebirb 29er On Trail</p>
+		</div></div></div>
+		</td>	   
+	<td><div class="tarjeta">
+		<div class="album">
+		<img src="imagenes/FireBird-NJ.jpg" alt="" >
+		<div class="contenido">
+		<p class="letra">Firebirb 29er On Trail</p>
+		</div></div></div>
+		</td>	   
+	<td><div class="tarjeta">
+		<div class="album">
+		<img src="imagenes/FireBird-GR.jpg" alt="" >
+		<div class="contenido">
+		<p class="letra">Firebirb 29er On Trail</p>
+		</div></div></div>
+		</td>	   
+	</tr>
 	
-		
-<script src="estilos/elementos.js"></script>
+	</table>
+	</div>  
+ 
+</main>
 <footer>
-	
+<div id="footer"></div>
+<script src="estilos/elementos.js"></script>
 </footer>
 </body>
 </html>
