--- a/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/bicicletas-MTB.html
+++ b/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/bicicletas-MTB.html
@@ -85,7 +85,7 @@
 </main>
 <footer>
 <div id="footer"></div>
-<script src="estilos/elementos.js"></script>
+<script src="js/elementos.js"></script>
 </footer>
 </body>
 </html>
