--- a/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/cascos.html
+++ b/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/cascos.html
@@ -47,7 +47,7 @@
 
 <footer>
 <div id="footer"></div>
-<script src="estilos/elementos.js"></script>
+<script src="js/elementos.js"></script>
 </footer>
 
 </body>
