--- a/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/contacto.html
+++ b/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/contacto.html
@@ -44,7 +44,7 @@
 </main>
 
 <footer id="footer">
-<script src="estilos/elementos.js"></script>
+<script src="js/elementos.js"></script>
 </footer>
 </body>
 </html>
