--- a/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/index.html
+++ b/Desktop/Cursos/Codo-a-codo-Agosto 2022/Bikes/index.html
@@ -52,7 +52,7 @@
 
 <footer id="footer">
 	
-<script src="estilos/elementos.js"></script>
+<script src="js/elementos.js"></script>
 	</footer>
 	</body>
 	</html>
